# tree-sitter-gleam

./: .gitattributes  .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml  generate-parser.yml  release.yml
bindings/c/: tree-sitter-gleam.pc.in
bindings/c/tree_sitter/: tree-sitter-gleam.h
bindings/go/: binding.go  binding_test.go
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_gleam/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterGleamTests/: TreeSitterGleamTests.swift
corpus/: functions.txt
queries/: highlights.scm  injections.scm  locals.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: attributes.txt  cases.txt  comments.txt  constants.txt  echo.txt  expressions.txt  external_functions.txt  functions.txt  imports.txt  pipes.txt  whole_files.txt
test/highlight/: constants.gleam  echo.gleam  functions.gleam  modules.gleam
test/tags/: frame.gleam
