[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-gleam"
description = "A tree-sitter grammar for the Gleam programming language"
version = "1.0.0"
keywords = ["incremental", "parsing", "tree-sitter", "gleam"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Jonathan Arnett", email = "jonarnett90@gmail.com" }]
requires-python = ">=3.10"
license.text = "Apache-2.0"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/gleam-lang/tree-sitter-gleam"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
